<resources>
    <string name="app_name">Inventory</string>
    <string name="Title">Welcome to Inventory Store</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_name">Product Name :</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="product_price">Product Price :</string>
    <string name="enter_product_price">    Enter Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="amazon">Amazon</string>
    <string name="flipkart">Flipart</string>
    <string name="ebay">EBay</string>
    <string name="menu_title">add_item</string>
    <string name="Home">home</string>
    <string name="items_are">Items Are</string>
    <string name="rs">Rs.</string>
    <string name="update">Update Product</string>
    <string name="delete">Delete Product</string>
    <string name="empty_view_text">No item available.. Please add</string>
    <string name="edit_product">Edit Item</string>
    <string name="product_name_requires">product name required!</string>
    <string name="price_requires">price required!</string>
    <string name="quantity_requires">quantity required!</string>
    <string name="supplier_name_requires">supplier name required!</string>
    <string name="supplier_phone_requires">phone number required!</string>
    <string name="update_failed">Update fail!</string>
    <string name="update_successful">successfully updated!</string>
    <string name="insert_failed">fail to insert!</string>
    <string name="insert_successful">successfully inserted!</string>
    <string name="keep_editing">Keep Editing!</string>
    <string name="discard">Discard!</string>
    <string name="unsaved_changes_dialog_msg">Want to Unsave Data!</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_all_products_message">All products are deleted!</string>
    <string name="delete_all_dialog_msg">Delete all item!</string>
    <string name="deleteItem">Delete all Item</string>
    <string name="save">Save</string>
    <string name="sale">Sale</string>
    <string name="Edit">Edit</string>
    <string name="view_item">View Item</string>
    <string name="quantity_change_msg">Qunatity changed</string>
    <string name="quantity_finish_msg">Changed Finish</string>
    <string name="delete_dialog_msg">Want to delete this item ?</string>
    <string name="delete_product_failed">deletion failed</string>
    <string name="delete_product_successful">Delete Successful!</string>
</resources>
